################
# Build system #
################
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]        # Search root directory
#include = ["dsail"]
exclude = ["build", "config", "models"]

####################
# Project metadata #
####################
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/

[project]
name = "PhysioNet_Challenge_2020"
version = "1.0.0"
requires-python = ">=3.6"
description = ""
readme = "README.md"
dependencies = [
    "numpy<2",
    "scikit_learn",
    "scipy",
    "future",
    "ultralytics-thop",
]
